[package]
name = "RNAS"
authors = ["Brandon Zhang <i@xcel.me>"]
version = "0.1.0"
edition = "2024"
description = "A unified solution for your Network Attached Storage systems"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
built = { version = "0.8", features = ["git2"] }

[features]
default = []
